--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,9 @@
         "ext-pdo": "*",
         "erusev/parsedown": "1.7.4",
         "fakerphp/faker": "^1.9.1",
-        "illuminate/console": "^8.0|^9.0|^10.0|^11.0",
-        "illuminate/routing": "^8.0|^9.0|^10.0|^11.0",
-        "illuminate/support": "^8.0|^9.0|^10.0|^11.0",
+        "illuminate/console": "^8.0|^9.0|^10.0|^11.0|^12.0",
+        "illuminate/routing": "^8.0|^9.0|^10.0|^11.0|^12.0",
+        "illuminate/support": "^8.0|^9.0|^10.0|^11.0|^12.0",
         "league/flysystem": "^1.1.4|^2.1.1|^3.0",
         "mpociot/reflection-docblock": "^1.0.1",
         "nikic/php-parser": "^5.0",
@@ -36,18 +36,18 @@
         "symfony/yaml": "^5.4|^6.0|^7.0"
     },
     "require-dev": {
-        "brianium/paratest": "^6.0",
+        "brianium/paratest": "^6.0|^7.8",
         "dms/phpunit-arraysubset-asserts": "^0.4",
         "laravel/legacy-factories": "^1.3.0",
         "laravel/lumen-framework": "^8.0|^9.0|^10.0",
         "league/fractal": "^0.20",
         "nikic/fast-route": "^1.3",
-        "orchestra/testbench": "^6.0|^7.0|^8.0",
-        "pestphp/pest": "^1.21",
-        "phpstan/phpstan": "^1.0",
-        "phpunit/phpunit": "^9.0|^10.0",
-        "symfony/css-selector": "^5.4|^6.0",
-        "symfony/dom-crawler": "^5.4|^6.0"
+        "orchestra/testbench": "^6.0|^7.0|^8.0|^10.0",
+        "pestphp/pest": "^1.21|^3.7",
+        "phpstan/phpstan": "^1.0|^2.1",
+        "phpunit/phpunit": "^9.0|^10.0|^11.5.3",
+        "symfony/css-selector": "^5.4|^6.0|^7.2",
+        "symfony/dom-crawler": "^5.4|^6.0|^7.2"
     },
     "autoload": {
         "psr-4": {
